# go-programming-tour-book/blog-service/internal/model/tag.go
@@ -1,5 +1,7 @@
 package model
 
+import "github.com/go-programming-tour-book/blog-service/pkg/app"
+
 type Tag struct {
 	*Model
 	Name  string `json:"name"`
@@ -8,4 +10,10 @@ type Tag struct {
 
 func (t Tag) TableName() string {
 	return "blog_tag"
+}
+
+// 专门用于展示Swagger文档
+type TagSwagger struct {
+	List  []*Tag
+	Pager *app.Pager
 }
